Se ajustaron las proporciones y cambiaron los iconos de los botones

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>ASV STUDIO</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet"/>
-    <script src="https://kit.fontawesome.com/57bc9db1cc.js" crossorigin="anonymous"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
   </head>
   <body >
     <nav class="nav-bar">
@@ -30,10 +30,12 @@
     </nav>
     <div id="slider-2"></div>
     <div id="slider"></div>
-    <div class="buttons">
-    <button id="prev-btn"><</button>
-    <button id="pause-btn">l l</button>
-    <button id="next-btn">></button>
+    <div class="buttons-container">
+      <div class="buttons">
+        <button id="prev-btn"><i class="fas fa-chevron-left"></i></button>
+        <button id="pause-btn">l l</button>
+        <button id="next-btn"><i class="fas fa-chevron-right"></i></button>
+      </div>
     </div>
 
     <div class="about-container">
@@ -48,6 +50,6 @@
       </div>
     </div>
 
-    <script src="script2.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
