--- a/yachts.html
+++ b/yachts.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css"/>
     <link rel="stylesheet" href="css/styles-slideshows.css"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
   </head>
   <body >
     <nav class="nav-bar">
@@ -31,10 +32,12 @@
     </nav>
     <div id="slider-2"></div>
     <div id="slider"></div>
-    <div class="buttons">
-    <button id="prev-btn"><</button>
-    <button id="pause-btn">l l</button>
-    <button id="next-btn">></button>
+    <div class="buttons-container">
+      <div class="buttons">
+        <button id="prev-btn"><i class="fas fa-chevron-left"></i></button>
+        <button id="pause-btn">l l</button>
+        <button id="next-btn"><i class="fas fa-chevron-right"></i></button>
+      </div>
     </div>
 
     <div class="about-container">
